--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -73,7 +73,7 @@
 
   &__img{
     width: 100%;
-    z-index: 100;
+    z-index: 1;
 
     grid-row: 2 / 6;
     grid-column: 2 / 6;
